# global

./: .Rbuildignore  README.md  configure  configure.ac
R/: RcppExports.R  s2io.R
inst/: COPYRIGHTS
proposal/: isc-proposal.html
src/: RcppExports.cpp  s2io.cpp
